--- a/html/signup.html
+++ b/html/signup.html
@@ -52,7 +52,7 @@
             </div>
 
             <div class="textInput">
-              <input type="text" placeholder="Enter email" />
+              <input type="email" placeholder="Enter email" />
               <span class="material-icons-outlined"> alternate_email </span>
             </div>
 
